--- a/uppgift.html
+++ b/uppgift.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="Uppgift.css" >     
+    <link rel="stylesheet" type="text/css" href="krocket.css" />
+
     <title>Uppgift</title>
 </head>
 <body class="uppgift-color">
 
     <div id="container">
 
-    
+    s
    
          <nav id="navigation">
 		<ul>
