--- a/uppgift.html
+++ b/uppgift.html
@@ -11,16 +11,16 @@
 
     <div id="container">
 
-    s
-   
-         <nav id="navigation">
-		<ul>
-			<li><a href="#" title="Dummy">Startsida</a></li>
-			<li><a href="#" title="Dummy">Svensk krocket</a></li>
-			<li><a href="#" title="Dummy">Engelsk krocket</a></li>
-			<li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
-		</ul>
-	</nav>
+      <h1>Inlämningsuppgift 2</h1>
+
+      <nav id="navigation">
+        <ul>
+          <li><a href="#" title="Dummy">Startsida</a></li>
+          <li><a href="#" title="Dummy">Svensk krocket</a></li>
+          <li><a href="#" title="Dummy">Engelsk krocket</a></li>
+          <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
+        </ul>
+      </nav>
 
     <img class="img_sport" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
 
