--- a/uppgift.html
+++ b/uppgift.html
@@ -9,9 +9,10 @@
 </head>
 <body class="uppgift-color">
 
-    <div id="container">
+<div id="container">
 
-      <h1>Inlämningsuppgift 2</h1>
+
+    <h1>uppgift</h1>
 
       <nav id="navigation">
         <ul>
@@ -21,12 +22,13 @@
           <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
         </ul>
       </nav>
-
-    <img class="img_sport" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
+   
+<div class="uppgift-div">
+   <img class="img_sport" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
 
     <p>Lista över världens högst rankade manliga golfspelare</p>
 
-<ol type="1"> 
+  <ol type="1"> 
     <li>Dustin Johnson.</li>
     <li>Justin Thomas.</li>
     <li>Jon Rahm. Spanien.</li>
@@ -37,14 +39,19 @@
     <li>Brooks Koepka.</li>
     <li>Jason Day.</li>
     <li>Tommy Fleetwood.</li>
-</ol>   
+  </ol>  
 
-
- <p>vill du see senast nytt på golf</p> <!-- form och input för att göra en länk med en knapp till annan sida.-->
+  <p>vill du see senast nytt på golf</p> 
              <form action="https://www.svenskgolf.se/senaste-nytt/">
              <input type="submit" value="Klicka här!">
              </form>
 
+</div>
+
+    
+
+
+ 
 </div>
 
    
