--- a/uppgift.html
+++ b/uppgift.html
@@ -59,7 +59,7 @@
 
    
 
- <footer>
+ <footer id="Footer">
       <!-- Här har vi skapat ett id på kontakt för att kunna navigera oss ner hit när man trycker på kontakt i vår 
     navigation högst upp -->
       <nav id="kontakt">
