--- a/uppgift.html
+++ b/uppgift.html
@@ -59,13 +59,13 @@
 
    
 
- <footer id="Footer">
+ <footer id="footer">
       <!-- Här har vi skapat ett id på kontakt för att kunna navigera oss ner hit när man trycker på kontakt i vår 
     navigation högst upp -->
       <nav id="kontakt">
-        Telefonnummer: <a href="">0700999223366778811</a> <br />
+        Telefonnummer: <a href="">0729168103</a> 
         <!-- br ger oss mellan slag-->
-        E-Mail: <a href="">golf@nacs.se</a>
+        E-Mail: <a href="">golf@nacas.se</a>
       </nav>
     </footer>
     
