--- a/uppgift.html
+++ b/uppgift.html
@@ -16,7 +16,7 @@
 
       <nav id="navigation">
         <ul>
-          <li><a href="#" title="Dummy">Startsida</a></li>
+          <li><a href="krocket.html" title="Dummy">Startsida</a></li>
           <li><a href="#" title="Dummy">Svensk krocket</a></li>
           <li><a href="#" title="Dummy">Engelsk krocket</a></li>
           <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
