--- a/uppgift.html
+++ b/uppgift.html
@@ -24,9 +24,11 @@
       </nav>
    
 <div class="uppgift-div">
-   <img class="img_sport" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
+   
 
     <p>Lista över världens högst rankade manliga golfspelare</p>
+
+<img class="img_Upgift" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
 
   <ol type="1"> 
     <li>Dustin Johnson.</li>
