--- a/uppgift.html
+++ b/uppgift.html
@@ -50,6 +50,15 @@
 
 </div>
 
+
+<div class="sidomeny-uppgift">
+  <h3 class="h3-Uppgift">här kand du senast nytt med golf</h3>
+  <img class="img_Upgift" src="ismail.png" alt="arrow" />
+  <form action="https://www.svenskgolf.se/senaste-nytt/">
+    <input type="submit" value="Klicka här!">
+    </form>
+</div>
+
     
 
 
