--- a/uppgift.html
+++ b/uppgift.html
@@ -26,7 +26,27 @@
       </nav> 
     
 </div>
-    
+<div class="uppgift-div">
+   
+
+  <p>Lista över världens högst rankade manliga golfspelare</p>
+
+<img class="img_Upgift" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
+
+<ol type="1"> 
+  <li>Dustin Johnson.</li>
+  <li>Justin Thomas.</li>
+  <li>Jon Rahm. Spanien.</li>
+  <li>Jordan Spieth.</li>
+  <li>Justin Rose. England.</li>
+  <li>Hideki Matsuyama.</li>
+  <li>Rickie Fowler.</li>
+  <li>Brooks Koepka.</li>
+  <li>Jason Day.</li>
+  <li>Tommy Fleetwood.</li>
+</ol>  
+</div>
+
    
 
 <div class="sidomeny-uppgift">
