--- a/uppgift.html
+++ b/uppgift.html
@@ -31,7 +31,7 @@
 
   <p>Lista över världens högst rankade manliga golfspelare</p>
 
-<img class="img_Upgift" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
+<img class="image_uppgift" src="Golferatsunset.jpg" alt="bild på golf solnedgång"/>
 
 <ol type="1"> 
   <li>Dustin Johnson.</li>
