--- a/uppgift.html
+++ b/uppgift.html
@@ -34,7 +34,8 @@
    
  </div>
 
- <div class="uppgift-div">
+<div class="container">
+  <div class="uppgift-div">
    
   <p> <strong> världens högst rankade manliga golfspelare</strong> </p>
 
@@ -54,6 +55,8 @@
          <li>Tommy Fleetwood.</li>
       </ol>  
   </div> 
+</div>
+ 
       
  </div>
  <footer>
