--- a/uppgift.html
+++ b/uppgift.html
@@ -4,6 +4,8 @@
 	<title>Inlämningsuppgift 2</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="krocket.css" />
+  <link rel="stylesheet" type="text/css" href="uppgift.css" />
+
 </head>
 <body >
 <div id="container">
@@ -63,7 +65,7 @@ navigation högst upp -->
     <!-- br ger oss mellan slag-->
     E-Mail: <a href="">golf@nacas.se</a>
   </nav>
-  
+
 </footer>
 </body>
 </html>
