--- a/uppgift.html
+++ b/uppgift.html
@@ -6,37 +6,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- länk till fontstyle hämtad från google-->
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
-    <title>FEiJK NEWS</title>
+
 </head>
-<!-- satte en klass på bodyelementet för att kunna styla en bakgrund-->
-<body class="kultur">
-<!-- loggan till nyhetssidan-->
-    <img src="leaderboard.feijknews.png" alt="feijknewslogga"
-    style="max-width: 100%;">
 
-    <!-- navigations fält till andra html-->
-<nav>
-    <ul id="navigation">
-     <li><a href="index.html">HEM</a> </li>
-     <li><a href="larsson.html">NÖJE</a></li>
-     <li><a href="horvallius.html">AKTUELLT</a></li>
-     <li><a href="Takow.html">SPORT</a></li>
-     <li><a href="thornander.html">KULTUR</a></li>
-     <li><a href="carlsson.html"> LIVSSTIL </a></li>
-     <li><a href="#kontakt">KONTAKT</a></li> <!--Denna är länkad med id i footer-->
-    </ul>
+
+<nav id="navigation">
+  <ul>
+    <li><a href="krocket.html" title="Dummy">Startsida</a></li>
+    <li><a href="#" title="Dummy">Svensk krocket</a></li>
+    <li><a href="#" title="Dummy">Engelsk krocket</a></li>
+    <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
+  </ul>
 </nav>
 
-<nav>
-    <ul class="underrubriker"> <!--Här gjorde jag som en underkategori med rubriker för ämnen inom kultur-->
-     <li><a href="#">Konst</a></li>
-     <li><a href="#">Litteratur</a></li>
-     <li><a href="#">Teater</a></li>
-     <li><a href="#">Musik</a></li>
-    </ul>
-</nav>
+
 
 <div class="flexbox_container"> <!--använde flexbox container för att organisera min layout i tre kolumner -->
     <div class="flexboxg"> <!--den här div classen är för att dela upp min html i 3 kolumner-->
@@ -44,23 +27,28 @@
         <h3>Veckans mest lästa kulturnyheter</h3> <!-- h3 dyker upp här för att kolumnerna ska hamna i den ordning jag önska,
              hade jag ändrat ordning i cssen hade en skärmläsare läst upp innehållet i fel ordning-->
             <ol> <!--Här är en ol lista med ofungerande klickbara nyhetsrubriker-->
-             <li><a href="#">George gör nytt publikrekord!</a></li>
-             <li><a href="#">Elefantos släpper sin nya bok</a></li>
-             <li><a href="#">Mopskonst skapar själsro</a></li>
-             <li><a href="#">Kungaparet Gustav & Silvias svåra tid</a></li>
-            </ol>           
+             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Dustin Johnson</a></li>
+             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Justin Thomas</a></li>
+             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Jon Rahm. Spanien.</a></li>
+             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Jordan Spieth.</a></li>
+             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Justin Rose.</a></li>
+            </ol>      
+
 </div>
 
 <div class="kultur_right">
-    <h3>Filtrera bland kulturnyheter</h3>   <!--Här är en checkbox för filtrering-->
-     <input type="checkbox" name="Service"
-     Value="litteratur"/> Litteratur <br>
-     <input type="checkbox" name="Service"
-     Value="musik"/> Musik <br>
-     <input type="checkbox" name="Service"
-     Value="kungahuset"/> Kungahuset <br>
-     <input type="checkbox" name="Service"
-     Value="konst"/> Konst <br>
+    <!--Här är en checkbox för filtrering-->
+    <h3>Logga in eller registrera dig</h3> <!--här är input för rutor till log-in och nyhetsbrev samt en klickbar knapp för registrering och prenumeration.-->
+    <p>Användarnamn</p>
+    <input type="text" name="Användarnamn" size="30" maxlength="50" />
+    <p>Lösenord</p> 
+    <input type="text" name="Lösenord" size="30" maxlength="50" />
+
+    <p>Inget konto? <a href="#">Registrera dig här!</a> </p>
+
+    <h3>Prenumenera på våra kulturnyheter!</h3>
+    <input type="email" name="email"/>
+    <input type="submit" value="Skicka"/>      
 </div>
 
 <div class="kultur_right">
@@ -116,19 +104,20 @@
 </article>
 </div>
 <!-- första diven är för tredje kolumnen i css:en andra för innehållet.-->
-<div class="flexboxg">
+<div class="flexboxg"><
+  <h3>här kan du välja vem du vill se mer av </h3> 
     <div class="kultur_left">    
-     <h3>Logga in eller registrera dig</h3> <!--här är input för rutor till log-in och nyhetsbrev samt en klickbar knapp för registrering och prenumeration.-->
-        <p>Användarnamn</p>
-        <input type="text" name="Användarnamn" size="30" maxlength="50" />
-        <p>Lösenord</p> 
-        <input type="text" name="Lösenord" size="30" maxlength="50" />
-
-        <p>Inget konto? <a href="#">Registrera dig här!</a> </p>
-
-        <h3>Prenumenera på våra kulturnyheter!</h3>
-        <input type="email" name="email"/>
-        <input type="submit" value="Skicka"/>        
+         <input type="checkbox" name="Service"
+     Value="litteratur"/>Dustin Johnson<br>
+     <input type="checkbox" name="Service"
+     Value="musik"/> Justin Thomas <br>
+     <input type="checkbox" name="Service"
+     Value="kungahuset"/> Jon Rahm<br>
+     <input type="checkbox" name="Service"
+     Value="konst"/>Jordan Spieth <br> 
+     <input type="checkbox" name="Service"
+     Value="konst"/>Justin Rose. <br> 
+      
     </div>
 </div>
 </div>
