--- a/uppgift.html
+++ b/uppgift.html
@@ -3,6 +3,8 @@
 <html lang="zxx"> <!--ändrat språk till zxx för att kunna använda andra språk än svenska engelska och latin-->
 <head>
     <link rel="stylesheet" type=text/css href="uppgift.css">
+    <link rel="stylesheet" type=text/css href="krocket.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +12,19 @@
 </head>
 <body class="uppgift-color">
 
+  <div id="container">
 
-<nav id="navigation">
-  <ul>
-    <li><a href="krocket.html" title="Dummy">Startsida</a></li>
-    <li><a href="#" title="Dummy">Svensk krocket</a></li>
-    <li><a href="#" title="Dummy">Engelsk krocket</a></li>
-    <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
-  </ul>
-</nav>
+    <h1>Inlämningsuppgift 2</h1>
+  
+    <nav id="navigation">
+      <ul>
+        <li><a href="krocket.html" title="Dummy">Startsida</a></li>
+        <li><a href="#" title="Dummy">Svensk krocket</a></li>
+        <li><a href="#" title="Dummy">Engelsk krocket</a></li>
+        <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
+      </ul>
+    </nav>
+  </div>  
 
 
 
