--- a/uppgift.html
+++ b/uppgift.html
@@ -1,139 +1,61 @@
-<!------------------ VALIDERAD ------------------->
 <!DOCTYPE html>
-<html lang="zxx"> <!--ändrat språk till zxx för att kunna använda andra språk än svenska engelska och latin-->
+<html lang="sv">
 <head>
-    <link rel="stylesheet" type=text/css href="uppgift.css">
-    <link rel="stylesheet" type=text/css href="krocket.css">
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Inlämningsuppgift 2</title>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" type="text/css" href="krocket.css" />
+  <link rel="stylesheet" type="text/css" href="uppgift.css"/>
 
 </head>
 <body class="uppgift-color">
 
-  <div >
+<div id="container">
 
-    <h1>Inlämningsuppgift 2</h1>
-  
-    <nav id="navigation">
-      <ul>
-        <li><a href="krocket.html" title="Dummy">Startsida</a></li>
-        <li><a href="#" title="Dummy">Svensk krocket</a></li>
-        <li><a href="#" title="Dummy">Engelsk krocket</a></li>
-        <li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
-      </ul>
-    </nav>
-  </div>  
+	<h1>Inlämningsuppgift 2</h1>
 
+	<nav id="navigation">
+		<ul>
+			<li><a href="krocket.html" title="Dummy">Startsida</a></li>
+			<li><a href="#" title="Dummy">Svensk krocket</a></li>
+			<li><a href="#" title="Dummy">Engelsk krocket</a></li>
+			<li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
+		</ul>
+	</nav>
 
+	<h2>hur hur spelar man krocket</h2>
 
-<div class="flexbox_container"> <!--använde flexbox container för att organisera min layout i tre kolumner -->
-    <div class="flexboxg"> <!--den här div classen är för att dela upp min html i 3 kolumner-->
-     <div class="kultur_right"> <!-- den här div classen är för innehållet i varje kolumn-->
-        <h3>Veckans mest lästa kulturnyheter</h3> <!-- h3 dyker upp här för att kolumnerna ska hamna i den ordning jag önska,
-             hade jag ändrat ordning i cssen hade en skärmläsare läst upp innehållet i fel ordning-->
-            <ol> <!--Här är en ol lista med ofungerande klickbara nyhetsrubriker-->
-             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Dustin Johnson</a></li>
-             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Justin Thomas</a></li>
-             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Jon Rahm. Spanien.</a></li>
-             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Jordan Spieth.</a></li>
-             <li><a href="https://sv.wikipedia.org/wiki/Lista_%C3%B6ver_v%C3%A4rldens_h%C3%B6gst_rankade_manliga_golfspelare">Justin Rose.</a></li>
-            </ol>      
+	<p class="text">Krocket är ett av de klassiska spelen i folks trädgårdar. 
+    Man kan spela 2-6 personer på en vanlig gräsmatta.
+     Målet är att slå sitt klot fram och tillbaka på en bana med tio bågar, längs en given rutt.
+      Den som kommer först i mål vinner.</p>
+
+      <iframe 
+      width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/zAJtK-ySmfE" 
+      title="YouTube video player" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+
+	<p class="image">
+		<img src="krocket.jpg" alt="Krocket in action." />
+		Det gäller att ha siktet rätt vid krocketspel!
+	</p>
+	
+	<h2>Tidig historia</h2>
+	<p class="text">
+		Spelet har genomgått stora växlingar både beträffande spelregler och popularitet hos allmänheten. Det har sitt ursprung i England, där det var känt redan under medeltiden och varifrån det spreds till södra Frankrike och över kontinenten. På 1860- och 1870-talen stod det på sin höjd av popularitet i Storbritannien och spreds därifrån till kolonierna över hela världen. En djup reaktion kom dock snabbt, och efter 1875 föll det nästan i glömska för att under tidigt 1900-tal åter komma i en blomstringsperiod.
+	</p>
+	
+	<p class="text">
+		Tävlingar arrangerades i England av United old England croquet association, och årligen tävlades om mästerskap för herrar och damer, både i enkelspel och par. Även i Sverige var spelet mycket populärt kring sekelskiftet 1900 och spelades "överallt" vid sommarnöjena. Där kom det dock inte under ledning av någon organisation, och organiserade tävlingar förekom inte.
+	</p>
+	
+	<p class="source">
+		Texten är hämtad från Wikipedia.
+	</p>
 
 </div>
-
-<div class="kultur_right">
-    <!--Här är en checkbox för filtrering-->
-    <h3>Logga in eller registrera dig</h3> <!--här är input för rutor till log-in och nyhetsbrev samt en klickbar knapp för registrering och prenumeration.-->
-    <p>Användarnamn</p>
-    <input type="text" name="Användarnamn" size="30" maxlength="50" />
-    <p>Lösenord</p> 
-    <input type="text" name="Lösenord" size="30" maxlength="50" />
-
-    <p>Inget konto? <a href="#">Registrera dig här!</a> </p>
-
-    <h3>Prenumenera på våra kulturnyheter!</h3>
-    <input type="email" name="email"/>
-    <input type="submit" value="Skicka"/>      
-</div>
-
-<div class="kultur_right">
-    <h3>Sök bland kulturnyheter</h3>        <!--En sökruta med knapp-->
-     <input type="text" name="sökruta" size="30" maxlength="50" />
-     <input type="submit" value="Sök">
-</div>
-</div>
-<!-- första divklassen är för andra kolumnen och article för innehåll. -->
-<div class="flexboxg">
-    <article class="kultur_nytt"> <!--här använde jag article för "nyheterna" -->
-        <a href="#"><!--a href för att det ska se ut som det går att klicka.-->
-        <figure> <!-- använde figure för att innehålla bild och bildtext och figcaption för ge en textbeskrivning av innehållet i figure.-->
-         <h2>Kungaparet Gustav & Silvias svåra tid</h2>
-         <img src="kungahuset.jpg" alt="bild på kungaparet" title="bild på kungaparet" style="max-width: 100%;">
-            <figcaption> Gustav berättar -"Vi har klöst på väggarna" </figcaption>
-        </figure>
-        </a>
-    </article>
-
-<article class="kultur_nytt">
-    <a href="#">
-        <figure>
-         <h2>George gör nytt publikrekord!</h2>
-         <img src="apkoncert.jpg" alt="bild på sjungande apa" title="bild på sjungande apa" style="max-width: 100%;" >
-            <figcaption>Apkonserterna slår publikrekordet! Se dåvarande redkordhållare! </figcaption>      
-        </figure>
-    </a>
-    <p>Vill du se vem som hade publikrekordet innan? </p> <!-- form och input för att göra en länk med en knapp till annan sida.-->
-         <form action="https://gotevent.se/arenor/ullevi/arenafakta/publikrekord-ullevi/">
-         <input type="submit" value="Klicka här!">
-         </form>
-</article>
-
-<article class="kultur_nytt">
-    <a href="#">
-        <figure>
-         <h2>Elefantos släpper sin nya bok</h2>
-         <img src="elefantos.jpg" alt="bild på elefantos" title="bild på elefantos" style="max-width: 100%;">
-         <figcaption> Elefantos gör det igen! Ännu en succébok!</figcaption>  
-        </figure>
-    </a>
-</article>
-    
-<article class="kultur_nytt">
-    <a href="#">
-        <figure>
-         <h2>Mopskonst skapar själsro</h2>
-         <img src="mopsmopsi.jpg" alt="bild på mops" title="bild på mops" style="max-width: 100%;">
-         <figcaption>Mopsar är bevis på hundras som ger själsro </figcaption>
-        </figure>
-    </a>        
-</article>
-</div>
-<!-- första diven är för tredje kolumnen i css:en andra för innehållet.-->
-<div class="flexboxg"><
-  <h3>här kan du välja vem du vill se mer av </h3> 
-    <div class="kultur_left">    
-         <input type="checkbox" name="Service"
-     Value="litteratur"/>Dustin Johnson<br>
-     <input type="checkbox" name="Service"
-     Value="musik"/> Justin Thomas <br>
-     <input type="checkbox" name="Service"
-     Value="kungahuset"/> Jon Rahm<br>
-     <input type="checkbox" name="Service"
-     Value="konst"/>Jordan Spieth <br> 
-     <input type="checkbox" name="Service"
-     Value="konst"/>Justin Rose. <br> 
-      
-    </div>
-</div>
-</div>
-
-<footer> <!-- footer med id som gör att man kommer antingen direkt ner om man klickar på kontakt eller direkt upp vid klick på telefon eller mail.-->
-    <nav id="kontakt">
-    Telefonnummer: <a href="">0700999223366778811</a> <br />
-    E-Mail: <a href="">feijknews@direkt.se</a>
-    </nav>
-</footer>
 </body>
 </html>
