--- a/uppgift.html
+++ b/uppgift.html
@@ -11,6 +11,11 @@
 
 <div id="container">
 
+
+  <div class="uppgift-div">
+
+
+
 	<h1>Inlämningsuppgift 2</h1>
 
 	<nav id="navigation">
@@ -27,7 +32,7 @@
 	<p class="text">Krocket är ett av de klassiska spelen i folks trädgårdar. 
     Man kan spela 2-6 personer på en vanlig gräsmatta.
      Målet är att slå sitt klot fram och tillbaka på en bana med tio bågar, längs en given rutt.
-      Den som kommer först i mål vinner.</p>
+      Den som kommer först i mål vinner.</p> <br>
 
       <iframe 
       width="560" 
@@ -43,10 +48,8 @@
 		Det gäller att ha siktet rätt vid krocketspel!
 	</p>
 	
-	<h2>Tidig historia</h2>
-	<p class="text">
-		Spelet har genomgått stora växlingar både beträffande spelregler och popularitet hos allmänheten. Det har sitt ursprung i England, där det var känt redan under medeltiden och varifrån det spreds till södra Frankrike och över kontinenten. På 1860- och 1870-talen stod det på sin höjd av popularitet i Storbritannien och spreds därifrån till kolonierna över hela världen. En djup reaktion kom dock snabbt, och efter 1875 föll det nästan i glömska för att under tidigt 1900-tal åter komma i en blomstringsperiod.
-	</p>
+	<h2></h2>
+
 	
 	<p class="text">
 		Tävlingar arrangerades i England av United old England croquet association, och årligen tävlades om mästerskap för herrar och damer, både i enkelspel och par. Även i Sverige var spelet mycket populärt kring sekelskiftet 1900 och spelades "överallt" vid sommarnöjena. Där kom det dock inte under ledning av någon organisation, och organiserade tävlingar förekom inte.
@@ -56,6 +59,7 @@
 		Texten är hämtad från Wikipedia.
 	</p>
 
+  </div>
 </div>
 </body>
 </html>
