--- a/uppgift.html
+++ b/uppgift.html
@@ -61,5 +61,16 @@
 
   </div>
 </div>
+
+<footer id="footer">
+  <!-- Här har vi skapat ett id på kontakt för att kunna navigera oss ner hit när man trycker på kontakt i vår 
+navigation högst upp -->
+  <nav id="kontakt">
+    Telefonnummer: <a href="">0729168103</a> 
+    <!-- br ger oss mellan slag-->
+    E-Mail: <a href="">golf@nacas.se</a>
+  </nav>
+</footer>
+
 </body>
 </html>
