--- a/uppgift.html
+++ b/uppgift.html
@@ -8,7 +8,12 @@
 
 </head>
 <body class="uppgift-color">
-
+	
+	<div class="kultur_right">
+		<h3>Sök bland kulturnyheter</h3>        <!--En sökruta med knapp-->
+		 <input type="text" name="sökruta" size="30" maxlength="50" />
+		 <input type="submit" value="Sök">
+	</div>
 <div id="container">
 
 
@@ -44,10 +49,10 @@
     </iframe>
 
 	<p class="image">
-		<img src="krocket.jpg" alt="Krocket in action." />
-		Det gäller att ha siktet rätt vid krocketspel!
-	</p>
+		<img src="jigck.jpg" alt="Krocket bild."/></p>
 	
+
+
 	<h2></h2>
 
 	
