--- a/uppgift.html
+++ b/uppgift.html
@@ -51,7 +51,7 @@
     </iframe>
 
 	<p class="image">
-		<img src="jigck.jpg" alt="Krocket bild."/></p>
+		<img class="img_Upgift" src="jigck.jpg" alt="Krocket bild."/></p>
 	
 
 
