--- a/uppgift.html
+++ b/uppgift.html
@@ -31,6 +31,7 @@
 			<li><a href="#" title="Dummy">Svensk krocket</a></li>
 			<li><a href="#" title="Dummy">Engelsk krocket</a></li>
 			<li><a href="uppgift.html" title="Inlämningsuppgift 2">Uppgift</a></li>
+			<li><a href="#kontakt">KONTAKT</a></li>
 		</ul>
 	</nav>
 
@@ -59,14 +60,13 @@
 
 	
 	<p class="text">
-		Tävlingar arrangerades i England av United old England croquet association, och årligen tävlades om mästerskap för herrar och damer, både i enkelspel och par. Även i Sverige var spelet mycket populärt kring sekelskiftet 1900 och spelades "överallt" vid sommarnöjena. Där kom det dock inte under ledning av någon organisation, och organiserade tävlingar förekom inte.
-	</p>
+		Materielen är av mycket högre kvalitet än de spel som köps på bensinmackar och snabbköp och en klubba för internationellt tävlingsspel väger normalt lika mycket som ett helt trädgårdsset av billigare typ. Bågarna som är godkända för 'competition' är gjorda av gjutjärn med vikter på över 2 kg per styck med fastställda dimensioner där klotet inte får ha mer marginal än 1,5 mm för att komma igenom. <br>
+        Av tradition är spelarna klädda i vitt, emellanåt med undantag för regnkläder, och skorna måste ha en platt sula för att inte hälen ska göra märken i gräsmattan. 'Sportsmanship' är grundläggande och det förordas att man själv påtalar om man gjort ett fel enligt regelboken, exempelvis ett felaktigt slag.	</p>
 	
-	<p class="source">
-		Texten är hämtad från Wikipedia.
-	</p>
+	<p class="source"> <strong>Texten är hämtad från</strong> <a href="http://www.krocketutrustning.se/om-krocket" title="KROCKETUTRUSTNING.SE">KROCKETUTRUSTNING.SE</a> KROCKETUTRUSTNING.SE.</p>
+</div>
 
-  </div>
+
 </div>
 
 <footer id="footer">
@@ -75,7 +75,7 @@ navigation högst upp -->
   <nav id="kontakt">
     Telefonnummer: <a href="">0729168103</a> 
     <!-- br ger oss mellan slag-->
-    E-Mail: <a href="">golf@nacas.se</a>
+    E-Mail: <a href="">upp@gift.se</a>
   </nav>
 </footer>
 
