--- a/uppgift.html
+++ b/uppgift.html
@@ -53,12 +53,16 @@
 
 <img class="image" src="jigck.jpg" alt="en blid på krocket matrial">
 
-	<h2></h2>
+	<h2> om krocket</h2>
 
 	
 	<p class="text">
-		Materielen är av mycket högre kvalitet än de spel som köps på bensinmackar och snabbköp och en klubba för internationellt tävlingsspel väger normalt lika mycket som ett helt trädgårdsset av billigare typ. Bågarna som är godkända för 'competition' är gjorda av gjutjärn med vikter på över 2 kg per styck med fastställda dimensioner där klotet inte får ha mer marginal än 1,5 mm för att komma igenom. <br>
-        Av tradition är spelarna klädda i vitt, emellanåt med undantag för regnkläder, och skorna måste ha en platt sula för att inte hälen ska göra märken i gräsmattan. 'Sportsmanship' är grundläggande och det förordas att man själv påtalar om man gjort ett fel enligt regelboken, exempelvis ett felaktigt slag.	</p>
+		Materielen är av mycket högre kvalitet än de spel som köps på bensinmackar och snabbköp och en klubba för internationellt tävlingsspel väger normalt lika mycket som ett helt trädgårdsset av billigare typ. Bågarna som är godkända för 'competition' är gjorda av gjutjärn med vikter på över 2 kg per styck med fastställda dimensioner där klotet inte får ha mer marginal än 1,5 mm för att komma igenom.
+		
+		<br>
+        Av tradition är spelarna klädda i vitt, emellanåt med undantag för regnkläder, och skorna måste ha en platt sula för att inte hälen ska göra märken i gräsmattan. 'Sportsmanship' är grundläggande och det förordas att man själv påtalar om man gjort ett fel enligt regelboken, exempelvis ett felaktigt slag.	</p> 
+		
+		<br>
 	
 	<p class=""> <strong>Texten är hämtad från</strong> <a href="http://www.krocketutrustning.se/om-krocket" title="KROCKETUTRUSTNING.SE">KROCKETUTRUSTNING.SE</a></p>
 </div>
