--- a/uppgift.html
+++ b/uppgift.html
@@ -9,14 +9,13 @@
 </head>
 <body class="uppgift-color">
     
-	<div class="flexboxg">
+	<div class="flexboxar">
 
-	
-	<div class="kultur_right">
+	   <div class="kultur_right">
 		<h3>Sök bland kulturnyheter</h3>        <!--En sökruta med knapp-->
 		 <input type="text" name="sökruta" size="30" maxlength="50" />
 		 <input type="submit" value="Sök">
-	</div>  
+	  </div>  
 
 	</div>
 	
