--- a/uppgift.html
+++ b/uppgift.html
@@ -9,7 +9,7 @@
 </head>
 <body class="uppgift-color">
     
-	<div class="flexboxar">
+	<div class="flexbox">
 
 	   <div class="kultur_right">
 		<h3>Sök bland kulturnyheter</h3>        <!--En sökruta med knapp-->
