--- a/uppgift.html
+++ b/uppgift.html
@@ -11,8 +11,8 @@
     
 	<div class="flexbox">
 
-	   <div class="kultur_right">
-		<h3>Sök bland kulturnyheter</h3>        <!--En sökruta med knapp-->
+	   <div class="sökbar_Upgift">
+		<h3>här kan du söka mer om krocket</h3>        <!--En sökruta med knapp (funkar inte)-->
 		 <input type="text" name="sökruta" size="30" maxlength="50" />
 		 <input type="submit" value="Sök">
 	  </div>  
