--- a/uppgift.html
+++ b/uppgift.html
@@ -70,6 +70,25 @@
 		<br>
 	
 	<p class=""> <strong>Texten är hämtad från</strong> <a href="http://www.krocketutrustning.se/om-krocket" title="KROCKETUTRUSTNING.SE">KROCKETUTRUSTNING.SE</a></p>
+
+
+	<br>
+
+<strong>Vad behövs för att spela krocket?</strong>
+	
+<dl>
+<dt>Du behöver tio bågar:</dt>
+<dd>där två placeras ut i kors mitt i banan och kallas krona</dd>
+<dt>Du behöver två käppar</dt>
+<dd>en där matchen startar och slutar, fotkäppen</dd>
+<dt>fotkäppen</dt>
+<dd> En på motstående sida där spelet vänder tillbaka, huvudkäppen.</dd>
+</dl>
+
+
+
+
+
 </div>
 
 
