--- a/uppgift.html
+++ b/uppgift.html
@@ -74,7 +74,8 @@
 
 	<br>
 
-<strong>Vad behövs för att spela krocket?</strong>
+<h3><strong>Vad behövs för att spela krocket?</strong></h3>
+
 	
 <dl>
 <dt>Du behöver tio bågar:</dt>
