--- a/uppgift.html
+++ b/uppgift.html
@@ -12,9 +12,7 @@
 	<div class="flexbox">
 
 	   <div class="sökbar_Upgift">
-		<h3>här kan du söka mer om krocket</h3>        <!--En sökruta med knapp (funkar inte)-->
-		 <input type="text" name="sökruta" size="30" maxlength="50" />
-		 <input type="submit" value="Sök">
+		<p>denna sidan är bara oppen mellan <time>08:00</time> till <time>23:00</time> each day.</p>
 	  </div>  
 
 	</div>
@@ -75,6 +73,8 @@
 	<br>
 
 <h3><strong>Vad behövs för att spela krocket?</strong></h3>
+
+<br> 
 
 	
 <dl>
