--- a/uppgift.html
+++ b/uppgift.html
@@ -9,12 +9,26 @@
 </head>
 <body class="uppgift-color">
     
+	
 	<div class="flexbox">
 
 	   <div class="sökbar_Upgift">
-		<p>denna sidan är bara oppen mellan <time>08:00</time> till <time>23:00</time> each day.</p>
-	  </div>  
+<fieldset>
+	<legend>frukt</legend>
 
+	<div>
+     <label>Color</label>
+	 <input type="color">
+
+	</div>
+
+
+
+	</fieldset>
+
+
+	   </div>
+		
 	</div>
 	
 	
