--- a/uppgift.html
+++ b/uppgift.html
@@ -14,7 +14,7 @@
 
 	   <div class="sökbar_Upgift">
 <fieldset>
-	<legend>frukt</legend>
+	<legend>väljt</legend>
 
 	<div>
      <label>Color</label>
@@ -22,7 +22,29 @@
 
 	</div>
 
+<br>
 
+<P>Vilken frukt skulle du vilja ha</P>
+
+<div>
+<input type="frukt-list">
+<select name="frukt" >
+<option value="">bannan</option>
+<option value="">äple</option>
+<option value="">Päron</option>
+<option value="">Apelsiner</option>
+<option value="">Aprikoshalvor</option>
+<option value="">Kiwi</option>
+
+
+
+</select>
+
+
+</datalist>
+
+
+</div>
 
 	</fieldset>
 
