--- a/uppgift.html
+++ b/uppgift.html
@@ -40,7 +40,7 @@
 </select>
 
 
-</datalist>
+
 
 
 </div>
@@ -111,15 +111,11 @@
 
 <br> 
 
-	
-<dl>
-<dt>Du behöver tio bågar:</dt>
-<dd>där två placeras ut i kors mitt i banan och kallas krona</dd>
-<dt>Du behöver två käppar</dt>
-<dd>en där matchen startar och slutar, fotkäppen</dd>
-<dt>fotkäppen</dt>
-<dd> En på motstående sida där spelet vänder tillbaka, huvudkäppen.</dd>
-</dl>
+<ul>
+	<li>krocket klubba till varje spelare</li>
+	<li>bågar krocket</li>
+	<li>krocket klot</li>
+</ul>
 
 
 
