--- a/uppgift.html
+++ b/uppgift.html
@@ -10,47 +10,42 @@
 <body class="uppgift-color">
     
 	
-	<div class="flexbox">
-
-	   <div class="sökbar_Upgift">
-<fieldset>
-	<legend>väljt</legend>
-
-	<div>
-     <label>Color</label>
-	 <input type="color">
-
-	</div>
-
-<br>
-
-<P>Vilken frukt skulle du vilja ha</P>
-
-<div>
-<select name="frukt" >
-<option value="">bannan</option>
-<option value="">äple</option>
-<option value="">Päron</option>
-<option value="">Apelsiner</option>
-<option value="">Aprikoshalvor</option>
-<option value="">Kiwi</option>
-
-
-
-</select>
-
-
-
-
-
-</div>
-
-	</fieldset>
-
-
-	   </div>
+	<div class="sport_right">
+		<fieldset>
+		   <legend>väljt</legend>
 		
-	</div>
+		   <div>
+			 <label>Color</label>
+			<input type="color">
+		
+		   </div>
+		
+		<br>
+		
+		<P>Vilken frukt skulle du vilja ha</P>
+		
+		<div>
+		<select name="frukt" >
+		<option value="">bannan</option>
+		<option value="">äple</option>
+		<option value="">Päron</option>
+		<option value="">Apelsiner</option>
+		<option value="">Aprikoshalvor</option>
+		<option value="">Kiwi</option>
+		
+		
+		
+		</select>
+		
+		
+		
+		
+		
+		</div>
+		
+		   </fieldset>
+		
+	 </div>
 	
 	
 	<div class="uppgift-div">
