--- a/uppgift.html
+++ b/uppgift.html
@@ -22,7 +22,7 @@
 		
 		<br>
 		
-		<P id="firsta">Vilken frukt skulle du vilja ha</P>
+		<h3 >Vilken frukt skulle du vilja ha</h3>
 		
 		<div>
 		<select name="frukt" >
@@ -86,7 +86,7 @@
 
 <img class="image" src="jigck.jpg" alt="en blid på krocket matrial">
 
-	<h2> om krocket</h2>
+	<h2>om krocket</h2>
 
 	
 	<p class="text">
