--- a/uppgift.html
+++ b/uppgift.html
@@ -22,7 +22,7 @@
 		
 		<br>
 		
-		<h6 >Vilken frukt skulle du vilja ha</h6>
+		<p >Vilken frukt skulle du vilja ha</p>
 		
 		<div>
 		<select name="frukt" >
