--- a/uppgift.html
+++ b/uppgift.html
@@ -73,11 +73,11 @@
 	<p class="text">Krocket är ett av de klassiska spelen i folks trädgårdar. 
     Man kan spela 2-6 personer på en vanlig gräsmatta.
      Målet är att slå sitt klot fram och tillbaka på en bana med tio bågar, längs en given rutt.
-      Den som kommer först i mål vinner.</p> <br>
+      Den som kommer först i mål vinner. <strong>texten är hämtat från</strong> <a href="https://www.win-and-tonic.se/har-kan-du-kopa/" title="win and tonic">win and tonic</a></p></p> <br>
 
       <iframe 
       width="560" 
-      height="315" 
+      height="315"  
       src="https://www.youtube.com/embed/zAJtK-ySmfE" 
       title="YouTube video player" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
