--- a/uppgift.html
+++ b/uppgift.html
@@ -10,7 +10,7 @@
 <body class="uppgift-color">
     
 	
-	<div class="sport_right">
+	<div class="upgpift_right">
 		<fieldset>
 		   <legend>väljt</legend>
 		
