--- a/uppgift.html
+++ b/uppgift.html
@@ -3,19 +3,26 @@
 <head>
 	<title>Inlämningsuppgift 2</title>
 	<meta charset="UTF-8" />
+	<!-- här är två länkar till stylesheets -->
 	<link rel="stylesheet" type="text/css" href="krocket.css" />
   <link rel="stylesheet" type="text/css" href="uppgift.css"/>
 
 </head>
+
+<!-- satte en klass på bodyelementet för att kunna styla en bakgrund-->
 <body class="uppgift-color">
     
-	
+
+		<!-- här satt jag en klass för att get div mer liv genom css -->
 	<div class="upgpift_right">
+
+			<!-- här använder jag filedset för att jag  kan gruppera relaterade formulärkontroller tillsammans inuti <fieldset>-elementet. (valfri element)-->
 		<fieldset>
-		   <legend>väljt</legend>
+		   <legend>välj</legend> 	<!-- här använder jag Elementet <legend> vilket oftas kommmer direkt efter den inledande taggen <fieldset> och innehåller en bildtext som hjälper till att identifiera syftet med formulärkontrollen. -->
+
 		
 		   <div>
-			 <label>Color</label>
+			 <label>färg</label>
 			<input type="color">
 		
 		   </div>
@@ -56,7 +63,7 @@
 
 
 
-	<h1>Inlämningsuppgift 2</h1>
+	<h1>Uppgift</h1>
 
 	<nav id="navigation">
 		<ul>
