--- a/uppgift.html
+++ b/uppgift.html
@@ -88,7 +88,7 @@
 	<p class="text">Krocket är ett av de klassiska spelen i folks trädgårdar. 
     Man kan spela 2-6 personer på en vanlig gräsmatta.
      Målet är att slå sitt klot fram och tillbaka på en bana med tio bågar, längs en given rutt.
-      Den som kommer först i mål vinner. <br> <strong>Texten är hämtat från</strong> <a href="https://www.win-and-tonic.se/har-kan-du-kopa/" title="win and tonic">win and tonic</a></p></p> <br>  <!-- här är en link som leder till den hemsidan jag har tagit texten i från och sidan använder jag mig av elmentet strong för att tidligt göra texten där efter använder jag mig av br som ger utryme mellan texten  -->
+      Den som kommer först i mål vinner. <br> <strong>Texten är hämtat från</strong> <a href="https://www.win-and-tonic.se/har-kan-du-kopa/" title="win and tonic">win and tonic</a></p> <br>  <!-- här är en link som leder till den hemsidan jag har tagit texten i från och sidan använder jag mig av elmentet strong för att tidligt göra texten där efter använder jag mig av br som ger utryme mellan texten  -->
 	  
 	  <!--här har jag använt mig av iframe. för att spela en youtube video i min sida. (en valfri elment)-->
       <iframe 
