--- a/uppgift.html
+++ b/uppgift.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-	<title>Inlämningsuppgift 2</title>
+	<title>Uppgift</title>
 	<meta charset="UTF-8" />
 	<!-- här är två länkar till stylesheets -->
 	<link rel="stylesheet" type="text/css" href="krocket.css" />
