--- a/uppgift.html
+++ b/uppgift.html
@@ -100,7 +100,7 @@
       allowfullscreen>
     </iframe>
 
-<img class="image" src="jigck.jpg" alt="en blid på krocket matrial"> <!-- här är en img för att visa min bild -->
+<img class="image" src="jigck.jpg" alt="en blid på krocket matrial"> <!-- här är en img för att visa min bild denna bilden är även helt fri att använda den är från https://unsplash.com/ -->
 
 	<h2>om krocket</h2>
 
